--- a/index.html
+++ b/index.html
@@ -291,40 +291,17 @@
 
         <section id="apply" class="apply">
             <div class="container">
-                <div class="apply-content">
-                    <h2 class="apply-title">지금 바로 신청하세요!</h2>
-                    <p class="apply-subtitle">
-                        코스모에듀벤처에서 여러분의 코딩 꿈을 펼치세요.
-                    </p>
-                    <form id="contactForm" method="POST">
-                        <div class="form-group">
-                            <label for="name">이름</label>
-                            <input type="text" id="name" name="name" class="form-control" placeholder="이름을 입력해주세요." required>
-                            <div class="form-error" id="nameError">이름을 입력해주세요.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="affiliation">소속 (학교)</label>
-                            <input type="text" id="affiliation" name="affiliation" class="form-control" placeholder="소속 학교를 입력해주세요." required>
-                            <div class="form-error" id="affiliationError">소속 (학교)을 입력해주세요.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="phone">연락처</label>
-                            <input type="tel" id="phone" name="phone" class="form-control" placeholder="연락처를 입력해주세요. (010-1234-5678)" required>
-                            <div class="form-error" id="phoneError">연락처를 입력해주세요.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">이메일</label>
-                            <input type="email" id="email" name="email" class="form-control" placeholder="이메일 주소를 입력해주세요." required>
-                            <div class="form-error" id="emailError">올바른 이메일 주소를 입력해주세요.</div>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">문의 내용</label>
-                            <textarea id="message" name="message" class="form-control" placeholder="문의 내용을 입력해주세요." required></textarea>
-                            <div class="form-error" id="messageError">문의 내용을 입력해주세요.</div>
-                        </div>
-                        <button type="submit" class="btn btn-primary" id="submitButton">전송하기</button>
-                        <div id="formStatus"></div>
-                    </form>
+                <h2 class="section-title">프로그램 신청</h2>
+                <p class="section-subtitle">
+                    프로그램에 대해 궁금하신 점이나 신청을 원하시면 아래 폼을 작성해주세요.
+                </p>
+                <div class="form-container">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf6FqFfq48Z9hwxQ-rfbNKRfoQSuPE4exm30hZB6KnR1VRQDA/viewform?embedded=true" 
+                            width="100%" 
+                            height="800" 
+                            frameborder="0" 
+                            marginheight="0" 
+                            marginwidth="0">로딩중...</iframe>
                 </div>
             </div>
         </section>
