코드 모듈화 및 최적화

--- a/course.html
+++ b/course.html
@@ -30,7 +30,7 @@
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- Schema.org markup -->
     <script type="application/ld+json">
@@ -59,18 +59,18 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="img\logo_36.png" alt="코스모에듀벤처 로고" width="36" height="36" loading="lazy">
+                    <img src="img/logo_36.png" alt="코스모에듀벤처 로고" width="36" height="36" loading="lazy">
                     <span> 코스모에듀벤처</span>
                 </a>
                 <nav class="nav-menu" id="navMenu">
                     <a href="about.html" class="nav-link">소개</a>
-                    <a href="course.html" class="nav-link">프로그램</a>
+                    <a href="course.html" class="nav-link active">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
                     <a href="index.html#mentors" class="nav-link">멘토</a>
                     <a href="index.html#reviews" class="nav-link">후기</a>
-                    <a href="index.html#apply" class="nav-link">신청</a>
+                    <a href="apply.html" class="nav-link">신청</a>
                 </nav>
-                <div class="mobile-toggle" id="mobileToggle">
+                <div class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -100,11 +100,11 @@
                             <p class="program-summary">방학 중 진행되는 종합 코딩 캠프</p>
                             <div class="program-meta">
                                 <div class="program-rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star-half-alt"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star-half-alt" aria-hidden="true"></i>
                                     <span>4.8</span>
                                     <span>(156)</span>
                                 </div>
@@ -122,11 +122,11 @@
                             <p class="program-summary">주말을 활용한 단기 집중 코딩 워크숍</p>
                             <div class="program-meta">
                                 <div class="program-rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star-half-alt"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star-half-alt" aria-hidden="true"></i>
                                     <span>4.7</span>
                                     <span>(189)</span>
                                 </div>
@@ -144,11 +144,11 @@
                             <p class="program-summary">학교별 맞춤형 코딩 체험 프로그램</p>
                             <div class="program-meta">
                                 <div class="program-rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star-half-alt"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star-half-alt" aria-hidden="true"></i>
                                     <span>4.6</span>
                                     <span>(245)</span>
                                 </div>
@@ -166,11 +166,11 @@
                             <p class="program-summary">단계별 프로젝트로 배우는 방과후 코딩 클럽</p>
                             <div class="program-meta">
                                 <div class="program-rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
                                     <span>4.9</span>
                                     <span>(178)</span>
                                 </div>
@@ -188,11 +188,11 @@
                             <p class="program-summary">1박 2일 집중 해커톤 프로그램</p>
                             <div class="program-meta">
                                 <div class="program-rating">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
                                     <span>4.9</span>
                                     <span>(134)</span>
                                 </div>
@@ -208,12 +208,12 @@
         <div class="container">
             <div class="footer-content">
                 <a href="index.html" class="footer-logo">
-                    <i class="fas fa-graduation-cap"></i>
+                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>
                     <span>코스모에듀벤처</span>
                 </a>
                 <div class="footer-contact">
-                    <p>대표번호 : 070-4337-4337</p>
-                    <p>이메일 : cosmoedu@cosmoedu.co.kr</p>
+                    <p>대표번호: 070-4337-4337</p>
+                    <p>이메일: cosmoedu@cosmoedu.co.kr</p>
                 </div>
                 <p class="footer-text">
                     © 2024 코스모에듀벤처. All rights reserved.
@@ -227,6 +227,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- 모듈화된 JavaScript -->
+    <script type="module" src="js/main.js"></script>
 </body>
-</html> 
+</html>
