--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="mentor-grid">
                     <div class="mentor-card">
                         <div class="mentor-img">
-                            <img src="img/mentor1.png" alt="아이유 멘토 - AI 교육 전문가" width="300" height="300" loading="lazy">
+                            <img src="img/mentor1.jpg" alt="아이유 멘토 - AI 교육 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
                             <h3 class="mentor-name">아이유</h3>
@@ -168,7 +168,7 @@
                     </div>
                     <div class="mentor-card">
                         <div class="mentor-img">
-                            <img src="img/mentor2.png" alt="이멘토 - AI 교육 전문가와 AI 수학 강사" width="300" height="300" loading="lazy">
+                            <img src="img/mentor2.jpg" alt="이멘토 - AI 교육 전문가와 AI 수학 강사" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
                             <h3 class="mentor-name">이멘토</h3>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="mentor-card">
                         <div class="mentor-img">
-                            <img src="img/mentor3.png" alt="박멘토 - 웹 개발 교육 전문가와 DB 전문가" width="300" height="300" loading="lazy">
+                            <img src="img/mentor3.jpg" alt="박멘토 - 웹 개발 교육 전문가와 DB 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
                             <h3 class="mentor-name">박멘토</h3>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="mentor-card">
                         <div class="mentor-img">
-                            <img src="img/mentor4.png" alt="최멘토 - AI 교육 전문가와 머신러닝 딥러닝 전문가" width="300" height="300" loading="lazy">
+                            <img src="img/mentor4.jpg" alt="최멘토 - AI 교육 전문가와 머신러닝 딥러닝 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
                             <h3 class="mentor-name">최멘토</h3>
