Add career page, remove mentor/review links

--- a/about.html
+++ b/about.html
@@ -63,8 +63,7 @@
                     <a href="about.html" class="nav-link active">소개</a>
                     <a href="course.html" class="nav-link">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
-                    <a href="index.html#mentors" class="nav-link">멘토</a>
-                    <a href="index.html#reviews" class="nav-link">후기</a>
+                    <a href="career.html" class="nav-link">진로/진학</a>
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <div class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기">
@@ -101,7 +100,7 @@
                         <p>함께 상상하고, 함께 코딩하며, 함께 미래를 만들어갑니다.<br>
                         코스모에듀벤처와 함께 미래를 코딩하세요!</p>
                     </div>
-                    <div class="about-stats">
+                    <!-- <div class="about-stats">
                         <div class="stat-item">
                             <h4>교육 수료 학생</h4>
                             <p class="stat-number">1,000+</p>
@@ -114,7 +113,7 @@
                             <h4>전문 멘토</h4>
                             <p class="stat-number">30+</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
