--- a/course.html
+++ b/course.html
@@ -66,8 +66,7 @@
                     <a href="about.html" class="nav-link">소개</a>
                     <a href="course.html" class="nav-link active">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
-                    <a href="index.html#mentors" class="nav-link">멘토</a>
-                    <a href="index.html#reviews" class="nav-link">후기</a>
+                    <a href="career.html" class="nav-link">진로/진학</a>
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <div class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기">
@@ -83,7 +82,10 @@
         <section class="page-header">
             <div class="container">
                 <h1 class="page-title">프로그램 안내</h1>
+                <p class="page-subtitle fas fa-user color:red"> 개인을 위한 맟춤형 교육(온/오프)</p><br>
+                <p class="page-subtitle fas fa-school"> 학교/단체를 위한 맞춤형 교육(위탁/출강)</p>
                 <p class="page-subtitle">코스모에듀벤처의 다양한 교육 프로그램을 소개합니다.</p>
+                
             </div>
         </section>
 
@@ -199,6 +201,28 @@
                             </div>
                         </div>
                     </a>
+
+                    <!-- <a href="program-detail.html?id=career" class="program-card">
+                        <div class="program-img">
+                            <img src="img/program-battle.jpg" alt="코드 배틀">
+                            <div class="program-badge">진로/진학</div>
+                        </div>
+                        <div class="program-details">
+                            <h3 class="program-title">퓨처 네비게이터</h3>
+                            <p class="program-summary">학생 대상 진로 패키지</p>
+                            <div class="program-meta">
+                                <div class="program-rating">
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <i class="fas fa-star" aria-hidden="true"></i>
+                                    <span>4.9</span>
+                                    <span>(72)</span>
+                                </div>
+                            </div>
+                        </div>
+                    </a> -->
                 </div>
             </div>
         </section>
