--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                     <a href="about.html" class="nav-link">소개</a>
                     <a href="course.html" class="nav-link">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
-                    <a href="#mentors" class="nav-link">멘토</a>
-                    <a href="#reviews" class="nav-link">후기</a>
+                    <a href="career.html" class="nav-link">진로/진학</a>
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <button class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기" aria-expanded="false" aria-controls="navMenu">
@@ -157,12 +156,11 @@
                             <img src="img/mentor1.jpg" alt="아이유 멘토 - AI 교육 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
-                            <h3 class="mentor-name">아이유</h3>
+                            <h3 class="mentor-name">인공지능 멘토</h3>
                             <ul class="mentor-desc">
-                                <li>AI 교육 전문가</li>
-                                <li>데이터분석</li>
-                                <li>머신러닝</li>
-                                <li>딥러닝</li>
+                                <li>딥러닝(Deep Learning)</li>
+                                <li>강화학습(Reinforcement Learning)</li>
+                                <li>자연어처리(NLP)</li>
                             </ul>
                         </div>
                     </div>
@@ -171,13 +169,11 @@
                             <img src="img/mentor2.jpg" alt="이멘토 - AI 교육 전문가와 AI 수학 강사" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
-                            <h3 class="mentor-name">이멘토</h3>
+                            <h3 class="mentor-name">데이터분석석 멘토</h3>
                             <ul class="mentor-desc">
-                                <li>AI 교육 전문가</li>
-                                <li>AI 수학</li>
-                                <li>AI 활용</li>
-                                <li>머신러닝</li>
-                                <li>딥러닝</li>
+                                <li>데이터 시각화(Data Visualization)</li>
+                                <li>예측 모델링(Predictive Modeling)</li>
+                                <li>통계적 추론(Statistical Inference)</li>
                             </ul>
                         </div>
                     </div>
@@ -186,11 +182,11 @@
                             <img src="img/mentor3.jpg" alt="박멘토 - 웹 개발 교육 전문가와 DB 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
-                            <h3 class="mentor-name">박멘토</h3>
+                            <h3 class="mentor-name">프로그래밍 멘토</h3>
                             <ul class="mentor-desc">
-                                <li>웹 개발 교육 전문가</li>
-                                <li>웹 개발</li>
-                                <li>데이터베이스</li>
+                                <li>프로젝트 기반 학습(PBL)</li>
+                                <li>컴퓨팅 사고력(CT)</li>
+                                <li>코딩 리터러시(Coding Literacy)</li>
                             </ul>
                         </div>
                     </div>
@@ -199,11 +195,11 @@
                             <img src="img/mentor4.jpg" alt="최멘토 - AI 교육 전문가와 머신러닝 딥러닝 전문가" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
-                            <h3 class="mentor-name">최멘토</h3>
+                            <h3 class="mentor-name">진로/진학 멘토</h3>
                             <ul class="mentor-desc">
-                                <li>AI 교육 전문가</li>
-                                <li>머신러닝</li>
-                                <li>딥러닝</li>
+                                <li>진로 탐색(Career Exploration)</li>
+                                <li>포트폴리오 개발(Portfolio Dev.)</li>
+                                <li>역량 기반 교육(Competency-Based Edu.)</li>
                             </ul>
                         </div>
                     </div>
