--- a/program-detail.html
+++ b/program-detail.html
@@ -59,8 +59,6 @@
                     <a href="about.html" class="nav-link">소개</a>
                     <a href="course.html" class="nav-link">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
-                    <a href="index.html#mentors" class="nav-link">멘토</a>
-                    <a href="index.html#reviews" class="nav-link">후기</a>
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <div class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기">
@@ -90,7 +88,7 @@
                                     <div class="program-target" id="programTarget"></div>
                                 </div>
                             </div>
-                            <div class="program-price" id="programPrice"></div>
+                            <!-- <div class="program-price" id="programPrice"></div> -->
                             <a href="apply.html" class="btn btn-primary apply-btn">신청하기</a>
                         </div>
                     </div>
