--- a/teacher.html
+++ b/teacher.html
@@ -66,8 +66,7 @@
                     <a href="about.html" class="nav-link">소개</a>
                     <a href="course.html" class="nav-link">프로그램</a>
                     <a href="teacher.html" class="nav-link active">교원연수</a>
-                    <a href="index.html#mentors" class="nav-link">멘토</a>
-                    <a href="index.html#reviews" class="nav-link">후기</a>
+                    <a href="career.html" class="nav-link">진로/진학</a>
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <div class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기">
