--- a/about.html
+++ b/about.html
@@ -82,10 +82,10 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h3><strong>미래를 코딩하는 사람들, 세상을 바꾸는 창의력</strong></h3>
-                        <p>코스모에듀벤처는 모든 학습자의 무한한 상상력과 문제해결 능력을 키워주는 코딩 교육 전문 기업입니다. 급변하는 디지털 시대에 필수적인 컴퓨팅 사고력과 창의적 문제해결 능력을 갖춘 미래 인재를 양성합니다.</p>
+                        <p>코스모에듀벤처는 모든 학습자의 무한한 상상력과 문제해결 능력을 키워주는 코딩 교육 전문 기업입니다.<br> 급변하는 디지털 시대에 필수적인 컴퓨팅 사고력과 창의적 문제해결 능력을 갖춘 미래 인재를 양성합니다.</p>
                         
                         <h3>우리의 교육 철학</h3>
-                        <p>코딩은 단순한 기술 습득이 아닌, 논리적 사고와 창의적 문제해결 능력을 키우는 새로운 언어입니다. 코스모에듀벤처는 학습자들이 수동적 지식 습득을 넘어 능동적으로 탐구하고 창조하는 과정을 통해 미래 사회의 핵심 역량을 기르도록 돕습니다.</p>
+                        <p>코딩은 단순한 기술 습득이 아닌, 논리적 사고와 창의적 문제해결 능력을 키우는 새로운 언어입니다.<br> 코스모에듀벤처는 학습자들이 수동적 지식 습득을 넘어 능동적으로 탐구하고 창조하는 과정을 통해 미래 사회의 핵심 역량을 기르도록 돕습니다.</p>
 
                         <h3>코스모에듀벤처만의 특별함</h3>
                         <ul class="special-features">
@@ -96,7 +96,7 @@
                         </ul>
 
                         <h3>미래를 준비하는 교육</h3>
-                        <p>4차 산업혁명 시대에는 단편적 지식보다 융합적 사고와 문제해결 능력이 중요합니다. 코스모에듀벤처는 코딩을 통해 디지털 리터러시, 컴퓨팅 사고력, 창의성, 협업 능력 등 미래 사회에 필수적인 역량을 기를 수 있도록 설계된 프로그램을 개인, 학교, 기업, 공공기관 등 모든 대상에게 제공합니다.</p>
+                        <p>4차 산업혁명 시대에는 단편적 지식보다 융합적 사고와 문제해결 능력이 중요합니다.<br> 코스모에듀벤처는 코딩을 통해 디지털 리터러시, 컴퓨팅 사고력, 창의성, 협업 능력 등 미래 사회에 필수적인 역량을 기를 수 있도록 설계된 프로그램을 개인, 학교, 기업, 공공기관 등 모든 대상에게 제공합니다.</p>
                         <p>함께 상상하고, 함께 코딩하며, 함께 미래를 만들어갑니다.<br>
                         코스모에듀벤처와 함께 미래를 코딩하세요!</p>
                     </div>
