--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처는 학교 맞춤형 코딩 교육을 제공하는 전문 교육기관입니다. 우리의 비전과 미션을 소개합니다.">
-    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석">
+    <meta name="keywords" content="코딩교육, 교원연수, 연수프로그램, 코스모에듀, 학교코딩, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
@@ -38,7 +38,7 @@
         "@context": "https://schema.org",
         "@type": "AboutPage",
         "name": "회사 소개 | 코스모에듀벤처",
-        "description": "코스모에듀벤처는 학교 맞춤형 코딩 교육을 제공하는 전문 교육기관입니다.",
+        "description": "코스모에듀벤처는 학교 맞춤형 코딩 교육을 제공하는 전문 교육 회사입니다.",
         "url": "https://cosmoedu25.github.io/about.html",
         "publisher": {
             "@type": "Organization",
