--- a/apply.html
+++ b/apply.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처의 교육 프로그램 신청 페이지입니다. 학교 맞춤형 코딩 교육 프로그램을 신청하세요.">
-    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 프로그램신청, 코딩교육신청">
+    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 프로그램신청, 코딩교육신청, 교원연수신청, 연수프로그램신청, 코스모에듀벤처">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
@@ -98,8 +98,8 @@
                     <a href="course.html" class="nav-link">프로그램</a>
                     <a href="teacher.html" class="nav-link">교원연수</a>
                     <a href="career.html" class="nav-link">진로/진학</a>
-                    <a href="index.html#mentors" class="nav-link">멘토</a>
-                    <a href="index.html#reviews" class="nav-link">후기</a>
+                    <!-- <a href="index.html#mentors" class="nav-link">멘토</a>
+                    <a href="index.html#reviews" class="nav-link">후기</a> -->
                     <a href="apply.html" class="nav-link">신청</a>
                 </nav>
                 <button class="mobile-toggle" id="mobileToggle" aria-label="메뉴 열기" aria-expanded="false" aria-controls="navMenu">
