--- a/career.html
+++ b/career.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처의 진로/진학 프로그램. IT 분야 진로 탐색과 대학 진학을 위한 맞춤형 교육 프로그램을 제공합니다.">
-    <meta name="keywords" content="코딩교육, 진로탐색, IT진로, 소프트웨어진학, 코딩진로, AI진로, 포트폴리오, 대학진학, 진로컨설팅">
+    <meta name="keywords" content="연수프로그램, 교원연수, 코스모에듀, 코딩교육, 진로탐색, IT진로, 소프트웨어진학, 코딩진로, AI진로, 포트폴리오, 대학진학, 진로컨설팅">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
