--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처의 학교 맞춤형 코딩 교육 프로그램. 학생들의 디지털 역량 강화와 미래 교육을 위한 전문 코딩 교육을 제공합니다.">
-    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석">
+    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석, 교원연수, 연수프로그램">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
