--- a/program-detail.html
+++ b/program-detail.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처의 학교 맞춤형 코딩 교육 프로그램 상세 정보. 맞춤형 커리큘럼, 전문 멘토링, 프로젝트 중심 학습으로 학생들의 디지털 역량을 강화합니다.">
-    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 프로젝트, 데이터분석">
+    <meta name="keywords" content="코딩교육, 학교코딩, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 프로젝트, 데이터분석, 교원연수, 연수프로그램, 코스모에듀벤처">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
