--- a/teacher.html
+++ b/teacher.html
@@ -7,7 +7,7 @@
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="코스모에듀벤처의 학교 맞춤형 코딩 교육 프로그램. 교사들을 위한 전문적인 코딩 교육 연수 프로그램을 제공합니다.">
-    <meta name="keywords" content="코딩교육, 교원연수, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석">
+    <meta name="keywords" content="코딩교육, 교원연수, 연수프로그램, 코스모에듀, 코딩교육, 교원연수, 코딩프로그램, 코스모에듀벤처, 미래교육, 코딩멘토링, 인공지능, 파이썬, AI, 인공지능 수학, 프로젝트, 스크래치, 엔트리, 수행평가, 데이터분석">
     <meta name="author" content="코스모에듀벤처">
     <meta name="robots" content="index, follow">
     
