--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </header>
 
     <main>
-        <section id="hero" class="hero">
+        <section id="hero" class="home-hero">
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
@@ -269,20 +269,14 @@
             </div>
         </section>
 
-        <section id="apply" class="apply">
+        <section id="cta" class="cta-section">
             <div class="container">
-                <h2 class="section-title">프로그램 신청</h2>
-                <p class="section-subtitle">
-                    프로그램에 대해 궁금하신 점이나 신청을 원하시면 아래 버튼을 클릭해주세요.
-                </p>
-                <div class="apply-buttons">
-                    <a href="apply.html" class="btn btn-primary">신청하기</a>
-                </div>
+                <h2>미래를 코딩하는 교육의 시작</h2>
+                <p>코스모에듀벤처와 함께 미래 역량을 키워나가세요. 지금 바로 시작하세요!</p>
+                <a href="apply.html" class="btn-white">프로그램 신청하기</a>
             </div>
         </section>
     </main>
-
-    <!-- 구글 폼 팝업은 apply.html 페이지로 이동되었습니다 -->
 
     <footer>
         <div class="container">
