--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <img src="img/mentor2.jpg" alt="이멘토 - AI 교육 전문가와 AI 수학 강사" width="300" height="300" loading="lazy">
                         </div>
                         <div class="mentor-info">
-                            <h3 class="mentor-name">데이터분석석 멘토</h3>
+                            <h3 class="mentor-name">데이터분석 멘토</h3>
                             <ul class="mentor-desc">
                                 <li>데이터 시각화(Data Visualization)</li>
                                 <li>예측 모델링(Predictive Modeling)</li>
