--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             </div>
         </div>
     </footer>
-
+    <!-- deploy연습 -->
     <!-- 모듈화된 JavaScript -->
     <script type="module" src="js/main.js"></script>
 </body>
