--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
             </div>
         </section>
         
-        <section class="stats-section">
+<!--         <section class="stats-section">
             <div class="container">
                 <h2 class="section-title">코스모에듀벤처 성과</h2>
                 <div class="stats-grid">
@@ -138,7 +138,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         
         <section class="cta-section">
             <div class="container">
